# yolov8_onnx_rust

./: Cargo.toml  README.md  Rocket.toml  index.html
src/: main.rs
